# ocdft

./: .travis.yml  CMakeLists.txt  __init__.py  cdft.cc  determinant.h  fasnocis.cc  fasnocis.h  noci.cc  noci.h  noci_mat.cc  noci_mat.h  pymodule.py
attic/: fasnocis.cc  fasnocis.h  junk.h  noci.h  noci_mat.cc  noci_mat.h  plugin.cc  rcks.cc  rcks.h
src/: aosubspace.cc  aosubspace.h  cdft.cc  constraint.h  determinant.cc  determinant.h  fasnocis.cc  fasnocis.h  helpers.cc  helpers.h  iao_builder.cc  iao_builder.h  livvo.cc  livvo.h  main.cc  noci.cc  noci.h  noci_mat.cc  noci_mat.h  ocdft.cc  ocdft.h  ocdft_analyze_excitations.cc  plugin.cc  rcks.cc  rcks.h  ucks.cc  ucks.h  ucks_determinant.cc
src/fmt/: format.cc
tests/: test_ocdft.py
tests/noci-1/: output.ref
tests/noci-2/: output.ref
tests/noci-ocdft-hf-core-ex-CO/: old-out
tests/noci-ocdft-hf-val-ex-CO/: old-out
tests/noci-val-ex-CO/: old-out
tests/ocdft-ch/: output.ref
tests/ocdft-chp/: output.ref
tests/ocdft-chpfb/: output.ref
tests/ocdft-cis/: output.ref
tests/ocdft-core/: output.ref
tests/ocdft-cp/: output.ref
tests/ocdft-cube/: hole_1_18_A.cube  particle_1_1_A.cube  particle_1_1_A.ref
tests/ocdft-mom/: output.ref
tests/ocdft-rew/: output.ref
tests/untested/noci-1/: output.ref
tests/untested/noci-2/: output.ref
tests/untested/noci-ocdft-hf-core-ex-CO/: old-out
tests/untested/noci-ocdft-hf-val-ex-CO/: old-out
